auto-test/tests/chapter_18/invalid_types/tag_resolution/invalid_shadow_self_reference.c
struct s {
    int a;
};

int main(void) {
    struct s {
        
        
        
        
        struct s nested;
    };
    return 0;
}